--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 *{
     margin: 0;
-    paddin: 0;
+    padding: 0;
 }
 
 body{
     background-color: #181818;
     color: #ffffff;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 header{
@@ -21,6 +22,7 @@ header{
     margin-top: 15px;
     margin-left: 20%;
     margin-bottom: 15px;
+    box-shadow:  10px 10px 5px -5px rgba(176,42,64,1);
 }
 
 
@@ -30,6 +32,9 @@ header{
     margin-left: 2.5%;
     width: 95%;
     margin-bottom: 10px;
+    border: 1px solid #ffffff;
+    border-radius: 4px;
+    box-shadow: 10px 10px 5px -5px rgba(66,98,107,1);
 }
 
 
@@ -39,6 +44,9 @@ header{
     margin-left: 15%;
     width: 70%;
     margin-bottom: 10px;
+    border: 1px solid #ffffff;
+    border-radius: 4px;
+    box-shadow: 10px 10px 5px -5px rgba(66,98,107,1);
 }
 
 .footer{
