--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ header{
     color: #000000;
     margin-left: 15%;
     width: 70%;
+    margin-top: 10px;
     margin-bottom: 10px;
     border: 1px solid #ffffff;
     border-radius: 4px;
