Padding-top Lisätty diviin

--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ header{
     color: #000000;
     margin-left: 2.5%;
     width: 95%;
+    margin-top: 10px;
     margin-bottom: 10px;
     border: 1px solid #ffffff;
     border-radius: 4px;
