--- a/style_vaalea.css
+++ b/style_vaalea.css
@@ -56,6 +56,7 @@ header{
     color: #000000;
     margin-left: 2.5%;
     width: 95%;
+    margin-top: 10px;
     margin-bottom: 10px;
     border: 1px solid rgba(66,98,107,1);
     border-radius: 4px;
